Bugfix speakers displayed too narrow inside the speakerlist
* Also fixes the additional show more butten when already on the speakers overview page

--- a/components/speaker/SpeakersList.scss
+++ b/components/speaker/SpeakersList.scss
@@ -30,6 +30,7 @@
   &__link {
     @include buttonBig;
     display: inline-block;
+    margin-top: 40px;
   }
 
   @include mq-up(sm) {
@@ -104,6 +105,7 @@
 
     &__speaker {
       max-width: calc(100% - 40px);
+      flex: 0 1 290px;
     }
   }
 }
